@@ -23,12 +23,13 @@
 
 package compiler.vectorapi;
 
-import jdk.incubator.foreign.MemorySegment;
+import java.lang.foreign.MemorySegment;
 import jdk.incubator.vector.*;
 import java.nio.ByteOrder;
 
 /*
  * @test
+ * @enablePreview
  * @bug 8262998
  * @summary Vector API intrinsincs should not modify IR when bailing out
  * @modules jdk.incubator.vector
